--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,3 +23,7 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64,linux/arm64,linux/386
           push: false
+          tags: aitorpazos/nextcloud-news-updater:${{ github.sha }}
+      - uses: Azure/container-scan@v0
+        with:
+          image-name: contoso.azurecr.io/k8sdemo:${{ github.sha }}
