--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,27 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: lint
+        uses: luke142367/Docker-Lint-Action@v1.0.0
+        with:
+          target: Dockerfile
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Build image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64,linux/arm64,linux/386
+          push: false
+          tags: aitorpazos/nextcloud-news-updater:${{ github.sha }}
+      - uses: Azure/container-scan@v0
+        with:
+          image-name: contoso.azurecr.io/k8sdemo:${{ github.sha }}
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
